tests/NormalTests/paczka2/big_fuzzy/53688442.err
Error in line 7: NRwe A535 66,7
Error in line 11: 1fw7f A535 63,7
Error in line 19: kbZEFCX A277 57,8
Error in line 27: J1oGBo9G A535 14,7
Error in line 16: uTa A277 90,5
Error in line 33: uTa S283 56,2
Error in line 37: J1oGBo9G A277 3,70
Error in line 36: 1fw7f A277 42,6
Error in line 30: J1oGBo9G A277 1,0
Error in line 50: kbZEFCX A277 -1,1
Error in line 48: kbZEFCX A277 15,5
Error in line 47: 1fw7f A277 72,7
Error in line 55: 1fw7f A535 5,2
Error in line 53: J1oGBo9G A277 10,0
Error in line 63: J1oGBo9G As3s 7s,1
Error in line 67: J1oGBo9G A535 8,7
Error in line 56: 1fw7f A654 10,8
Error in line 70: 1fw7f A535 27,0
Error in line 72: 1fw7f A654 50,2
Error in line 84: NRwe A535 -1,2
Error in line 83: Pcd S283 134,4
Error in line 82: kbZEFCX S283 33,6
Error in line 91: uTa S283 26,8
Error in line 98: Pcd A535 02,5
Error in line 102: 1fw7f A535 77,0
Error in line 103: NRwe S283 19,0
Error in line 105: NRwe A654 60,6
Error in line 114: Pcd A535 279,4
Error in line 115: uTa A654 72,0
Error in line 123: uTa A654 72,2
Error in line 125: A654 A535 19,3
Error in line 131: NRwe A535 74,2
Error in line 149: A654 S283 127,0
Error in line 155: A654 A535 75,2
Error in line 150: kbZEFCX S283 52,8
Error in line 173: NRwe A654 1,9
Error in line 174: NRwe A535 38,4
Error in line 193: kbZEFCX A535 17,42
Error in line 192: kbZEFCX A535 5,2
Error in line 195: kbZEFCX A277 60,6
Error in line 200: kbZEFCX S283 425,7
Error in line 209: A654 A654 84,5
Error in line 211: kbZEFCX A654 8,1
Error in line 206: NRwe A654 55,4
Error in line 222: NRwe A535 48,9
Error in line 219: 1fw7f A535 83,4
Error in line 217: uTa A535 40,8
Error in line 236: 1fw7f S283 122,0
Error in line 231: uTa A654 95,3
Error in line 243: NRwe A654 49,6
